[service-manager] Join processes in background

Changes ServiceProcessLauncher to join service processes from a
background task rather than from the launcher's owning sequence.

Updates RenderThreadImplBrowserTest so that it actually has a real IO
thread and therefore doesn't run all tasks (including "background"
tasks) on the same sequence on which Mojo does IPC.

This prevents service process joins from blocking internal IPC routing
and thus allows ServiceProcessLauncher to be used safely without
deadlocking on shutdown, particularly in aforementioned browser tests.

Bug: 844078
Change-Id: Idf75dac40a9b16b49703483f0d010be3f3bc68aa
Reviewed-on: https://chromium-review.googlesource.com/1173428
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582818}
Former-commit-id: d98017a0c05e9fb9df611d585e85791e0ecac473